More skeleton, fixed up introduction.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,28 @@
             <h2>Python Developer</h2>
         </header>
         <section id="introduction">
-            <p>Fascinated with business and technology, Piper went to school for a degree in management information systems, graduating as one of the last MIS on her campus. She spent the next few years freelancing her various skills and learning to program better than her education offered. After a handful of terrible video games and a new appreciation of software development, she headed to New York City to further her career. There she became active in Python NYC and hired with Dog on a Horse as a server developer. Now she writes web APIs and teaches people how to write video games in Pyton.</p>
+            <p>Fascinated with business and technology, I went to school for a degree in management information systems, and graduated as one of the last MIS on my campus. I spent the next few years freelancing various skills, including bookkeeping and editing, and learning to program better than my education offered. After a handful of terrible video games and a new appreciation for software development, I moved to New York City to further my career. There I became active in NYC Python and landed a position with Dog on a Horse as a server developer. Now I write web APIs and teach people how to write video games using Pyton.</p>
+        </section>
+        <section id="experience">
+            <header><h1>Work History</h1></header>
+            <ol>
+                <li><h2>Dog on a Horse</h2>
+                    <h3>Server Developer</h3>
+                    <p>July 2014 to Present</p></li>
+                <li><h2>Independent Consultant</h2>
+                    <p>December 2012 to Present</p></li>
+            </ol>
+        </section>
+        <section id="projects">
+            <header><h1>Projects</h1></header>
+            <p><small>To be filled later.</small></p>
+        </section>
+        <section id="contact">
+            <header><h1>Contact</h1></header>
+            <ul>
+                <li><a href="https://twitter.com/pathunstrom">Twitter</a></li>
+                <li><a href="mailto:pathunstrom@gmail.com">Email</a>
+            </ul>
         </section>
         <!-- End of Content. -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
