--- a/index.html
+++ b/index.html
@@ -6,63 +6,113 @@
         <title>Piper Thunstrom</title>
         <meta name="description" content="Personal website of Piper Thunstrom">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300|Quattrocento:700" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
-
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <p class="browserupgrade">
+                You are using an <strong>outdated</strong> browser. Please
+                <a href="http://browsehappy.com/">upgrade your browser</a> to
+                improve your experience.
+            </p>
         <![endif]-->
         <!-- Content -->
         <header>
             <h1>Piper Thunstrom</h1>
-            <h2>Python Developer</h2>
-        </header>
-        <section id="introduction">
-            <p>Fascinated with business and technology, I went to school for a degree in management information systems, and graduated as one of the last MIS on my campus. I spent the next few years freelancing various skills, including bookkeeping and editing, and learning to program better than my education offered. After a handful of terrible video games and a new appreciation for software development, I moved to New York City to further my career. There I became active in NYC Python and landed a position with Dog on a Horse as a server developer. Now I write web APIs and teach people how to write video games using Pyton.</p>
-        </section>
-        <section id="experience">
-            <header><h1>Work History</h1></header>
-            <ol>
-                <li><h2>Dog on a Horse</h2>
-                    <h3>Server Developer</h3>
-                    <p>July 2014 to Present</p></li>
-                <li><h2>Independent Consultant</h2>
-                    <p>December 2012 to Present</p></li>
-            </ol>
-        </section>
-        <section id="projects">
-            <header><h1>Projects</h1></header>
-            <p><small>To be filled later.</small></p>
-        </section>
-        <section id="contact">
-            <header><h1>Contact</h1></header>
             <ul>
-                <li><a href="https://twitter.com/pathunstrom">Twitter</a></li>
-                <li><a href="mailto:pathunstrom@gmail.com">Email</a>
+                <li>Platform Developer</li>
+                <li>Pythonista</li>
+                <li>Games Enthusiast</li>
             </ul>
+        </header>
+
+        <section id="call-to-action">
+            <h1>Need a web developer?</h1>
+            <p>
+                Let's spend an hour and identify the problems you need solved.
+                We'll use my expertise and your knowledge of your business to
+                identify high value projects and the kinds of talent you'll
+                want to hire to make them a reality.
+            </p>
+            <a class="contact-button" href="mailto:pathunstrom@gmail.com?subject=Help!">Get help now.</a>
         </section>
+
+        <section id="history">
+            <h1>About Piper</h1>
+            <p>
+                Piper is a business major with a technical focus that developed
+                a passion for small businesses and problem solving.
+            </p>
+            <p>
+                She graduated summa cum laude with a degree in management
+                information systems. In school she discovered a passion for
+                building systems that lead her to continue her education by
+                learning software development.
+            </p>
+            <p>
+                She took her skills into the start up space and found she was
+                quite skilled with platform development. But she never left her
+                business background far behind, and has provided consultation
+                for freelancers, contractors and small business owners of all
+                types.
+            </p>
+        </section>
+
+        <section id="portfolio">
+            <h1>Portfolio</h1>
+            <div class="featured project">
+                <h2>Pursued Py Bear</h2>
+                <a href=""><img src="img/code.png"></a>
+                <p>
+                    A new game framework aimed at students and educators using
+                    Python.
+                </p>
+            </div>
+            <div class="projects">
+                <div class="project">
+                    <h2>Tribute Page</h2>
+                    <a href="https://codepen.io/pathunstrom/full/wzxgNN/">
+                        <img src="img/lucyhicks.jpg">
+                    </a>
+                    <p>
+                        A one page tribute to Lucy Hicks Anderson, black trans
+                        woman, sex worker, and one of the first people to fight
+                        for marriage equality.
+                    </p>
+                </div>
+                <div class="project">
+                    <h2>Sample Project</h2>
+                    <a href="#">
+                        <img src="img/code.png">
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla dictum vehicula aliquam.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h1>Find Piper on the Web</h1>
+            <a class="social-media twitter" href="https://twitter.com/pathunstrom"><img src="img/twitter-32.png"></a>
+            <a class="social-media facebook" href="https://www.facebook.com/PythonGamesChick/"><img src="img/facebook-8-32.png"></a>
+        </section>
+
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="#call-to-action">Get Help</a></li>
+                    <li><a href="#history">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                </ul>
+            </nav>
+        </footer>
         <!-- End of Content. -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!--
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-        -->
     </body>
 </html>
