--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h1>Portfolio</h1>
             <div class="featured project">
                 <h2>Pursued Py Bear</h2>
-                <a href=""><img src="img/code.png"></a>
+                <a href="https://github.com/pathunstrom/pursuedpybear"><img src="img/code.png"></a>
                 <p>
                     A new game framework aimed at students and educators using
                     Python.
