Minor language tweaks, style changes.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="history">
             <h1>About Piper</h1>
             <p>
-                Piper is a business major with a technical focus that developed
+                Piper was a business major with a technical focus that developed
                 a passion for small businesses and problem solving.
             </p>
             <p>
