Adds screenshot of the Lucky Hicks tribute page.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="project">
                     <h2>Tribute Page</h2>
                     <a href="https://codepen.io/pathunstrom/full/wzxgNN/">
-                        <img src="img/lucyhicks.jpg">
+                        <img src="img/lucyhicks.png">
                     </a>
                     <p>
                         A one page tribute to Lucy Hicks Anderson, black trans
